--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,8 +3,8 @@ resources:
   - auth-service/service.yaml
   - business-logic-service/deployment.yaml
   - business-logic-service/service.yaml
-  - database-service/deployment.yaml
-  - database-service/service.yaml
+  - db-service/deployment.yaml
+  - db-service/service.yaml
   - opensearch/deployment.yaml
   - opensearch/service.yaml
   - opensearch/persistent-volume.yaml
