Added missing volume

--- a/business-logic/deployment.yaml
+++ b/business-logic/deployment.yaml
@@ -27,4 +27,4 @@ spec:
             - name: AUTH_HOST
               value: document-manager_auth-service
             - name: AUTH_PORT
-              value: 3000
+              value: "3000"
