Added dashboard to ingress

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -23,7 +23,7 @@ spec:
                 name: business-logic-service
                 port:
                   number: 5000
-          - path: /dashboard
+          - path: /dashboard/?(.*)
             pathType: Prefix
             backend:
               service:
