--- a/ingress.yaml
+++ b/ingress.yaml
@@ -23,10 +23,10 @@ spec:
                 name: business-logic-service
                 port:
                   number: 5000
-          - path: /dashboard/?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: opensearch-dashboard
-                port:
-                  number: 5601
+#          - path: /dashboard/?(.*)
+#            pathType: Prefix
+#            backend:
+#              service:
+#                name: opensearch-dashboard
+#                port:
+#                  number: 5601
