--- a/business-logic/deployment.yaml
+++ b/business-logic/deployment.yaml
@@ -25,6 +25,6 @@ spec:
             - name: PORT
               value: "5000"
             - name: AUTH_HOST
-              value: document-manager_auth-service
+              value: auth-service
             - name: AUTH_PORT
               value: "3000"
