Changed db path

--- a/business-logic/deployment.yaml
+++ b/business-logic/deployment.yaml
@@ -28,3 +28,7 @@ spec:
               value: auth-service
             - name: AUTH_PORT
               value: "3000"
+            - name: DB_HOST
+              value: db-service
+            - name: DB_PORT
+              value: "5700"
