--- a/opensearch/service.yaml
+++ b/opensearch/service.yaml
@@ -11,8 +11,10 @@ spec:
   ports:
     - name: rest
       port: 9200
+      targetPort: 9200
     - name: performance
       port: 9600
+      targetPort: 9600
 ---
 apiVersion: v1
 kind: Service
