--- a/opensearch/deployment.yaml
+++ b/opensearch/deployment.yaml
@@ -31,9 +31,9 @@ spec:
                   fieldPath: metadata.name
             # List the DNS names of the pods using the headless service.
             - name: discovery.seed_hosts
-              value: "opensearch-0.opensearch,opensearch-1.opensearch"
+              value: "opensearch"
             - name: cluster.initial_cluster_manager_nodes
-              value: "opensearch-0.opensearch,opensearch-1.opensearch"
+              value: "opensearch"
             - name: bootstrap.memory_lock
               value: "true"
             - name: OPENSEARCH_JAVA_OPTS
@@ -82,5 +82,5 @@ spec:
             - containerPort: 5601
           env:
             - name: OPENSEARCH_HOSTS
-              value: '["https://opensearch-0.opensearch:9200", "https://opensearch-1.opensearch:9200"]'
+              value: '["https://opensearch:9200"]'
 
