--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -7,13 +7,13 @@ metadata:
     argocd.argoproj.io/sync-wave: "0"      # sync after the operator
 spec:
   general:
-    version: 2.14.0                        # bump at will; operator rolls forward :contentReference[oaicite:1]{index=1}
-    serviceName: opensearch                # generates headless & ClusterIP svc
+    version: 2.17.0                        # bump at will; operator rolls forward :contentReference[oaicite:1]{index=1}
+    serviceName: opensearch-service                # generates headless & ClusterIP svc
     httpPort: 9200
     drainDataNodes: true
   dashboards:
     enable: true
-    version: 2.14.0
+    version: 2.17.0
   nodePools:
     - component: cluster-manager
       replicas: 3
