--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -13,6 +13,7 @@ spec:
     drainDataNodes: true
   dashboards:
     enable: true
+    replicas: 1
     version: 2.17.0
   nodePools:
     - component: cluster-manager
