--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -7,14 +7,14 @@ metadata:
     argocd.argoproj.io/sync-wave: "0"      # sync after the operator
 spec:
   general:
-    version: 2.17.0                        # bump at will; operator rolls forward :contentReference[oaicite:1]{index=1}
+    version: latest                        # bump at will; operator rolls forward :contentReference[oaicite:1]{index=1}
     serviceName: opensearch-service                # generates headless & ClusterIP svc
     httpPort: 9200
     drainDataNodes: true
   dashboards:
     enable: true
     replicas: 1
-    version: 2.17.0
+    version: latest
   nodePools:
     - component: cluster-manager
       replicas: 3
