--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -29,3 +29,5 @@ spec:
       # reuse the secret you already create in README
       adminCredentialsSecretName:
         name: admin-credentials-secret
+      securityConfigSecret:
+        name: securityconfig-secret
