Updated opensearch-service-dashboard in ingress.yaml
Signed-off-by: Ana Toader <ana_toader81@yahoo.com>

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -28,6 +28,6 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: opensearch-dashboards
+                name: opensearch-service-dashboards
                 port:
                   number: 5601
