Updated ingress dashboard rewrite
Signed-off-by: Ana Toader <ana_toader81@yahoo.com>

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -24,7 +24,7 @@ spec:
                 name: business-logic-service
                 port:
                   number: 5000
-          - path: /dashboard/?(.*)
+          - path: /dashboard(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
               service:
