--- a/ingress.yaml
+++ b/ingress.yaml
@@ -5,10 +5,6 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      location ~* "^/dashboard" {
-        rewrite ^(/dashboard.*) $1 break;
-      }
 spec:
   ingressClassName: nginx
   rules:
@@ -28,7 +24,7 @@ spec:
                 name: business-logic-service
                 port:
                   number: 5000
-          - path: /dashboard/?(.*)
+          - path: /dashboard(/.*|$)
             pathType: ImplementationSpecific
             backend:
               service:
