--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -17,6 +17,11 @@ spec:
     version: 2.14.0
     enable: true
     replicas: 1
+    env:
+      - name: server.basePath
+        value: /dashboard
+      - name: server.rewriteBasePath
+        value: "true"
     resources:
       requests:
         memory: "1Gi"
