--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -17,11 +17,6 @@ spec:
     version: 2.14.0
     enable: true
     replicas: 1
-    env:
-      - name: server.basePath
-        value: /dashboard
-      - name: server.rewriteBasePath
-        value: "true"
     resources:
       requests:
         memory: "1Gi"
@@ -29,6 +24,10 @@ spec:
       limits:
         memory: "1Gi"
         cpu: "500m"
+    config:
+      opensearch_dashboards.yml: |
+        server.basePath: "/dashboard"
+        server.rewriteBasePath: true
   confMgmt:
     smartScaler: true
   nodePools:
