Updated ingress dashboard rewrite
Signed-off-by: Ana Toader <ana_toader81@yahoo.com>

--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -27,7 +27,7 @@ spec:
     config:
       opensearch_dashboards.yml: |
         server.basePath: "/dashboard"
-        server.rewriteBasePath: true
+        server.rewriteBasePath: false
   confMgmt:
     smartScaler: true
   nodePools:
