--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,30 +2,27 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: document-manager-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
           - path: /auth/?(.*)
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: auth-service
                 port:
                   number: 3000
           - path: /api/?(.*)
-            pathType: ImplementationSpecific
+            pathType: Prefix
             backend:
               service:
                 name: business-logic-service
                 port:
                   number: 5000
-          - path: /dashboard/()?(.*)
-            pathType: ImplementationSpecific
+          - path: /dashboard/?(.*)
+            pathType: Prefix
             backend:
               service:
                 name: opensearch-service-dashboards
