Added PREFIX env variable in business logic deployment.yaml
Signed-off-by: Ana Toader <ana_toader81@yahoo.com>

--- a/business-logic/deployment.yaml
+++ b/business-logic/deployment.yaml
@@ -32,3 +32,5 @@ spec:
               value: database-service
             - name: DB_PORT
               value: "5700"
+            - name: PREFIX
+              value: /api
