--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,28 +2,26 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: document-manager-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /auth/?(.*)
+          - path: /auth
             pathType: Prefix
             backend:
               service:
                 name: auth-service
                 port:
                   number: 3000
-          - path: /api/?(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: business-logic-service
                 port:
                   number: 5000
-          - path: /dashboard/?(.*)
+          - path: /dashboard
             pathType: Prefix
             backend:
               service:
