--- a/auth-service/service.yaml
+++ b/auth-service/service.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-service
+  labels:
+    app: auth-service
 spec:
   selector:
     app: auth-service
   ports:
     - port: 3000
       targetPort: 3000
+      name: http
   type: ClusterIP
