--- a/ingress.yaml
+++ b/ingress.yaml
@@ -28,3 +28,10 @@ spec:
                 name: opensearch-service-dashboards
                 port:
                   number: 5601
+          - path: /grafana
+            pathType: Prefix
+            backend:
+              service:
+                name: monitoring-grafana
+                port:
+                  number: 3000
