Added ingest node
Signed-off-by: Ana Toader <ana_toader81@yahoo.com>

--- a/opensearch/cluster.yaml
+++ b/opensearch/cluster.yaml
@@ -42,6 +42,8 @@ spec:
       roles:
         - "cluster_manager"
         - "data"
+        - "ingest"
+        - "ml"
   security:
     config:
       adminCredentialsSecret:
