--- a/business-logic/service.yaml
+++ b/business-logic/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: business-logic-service
+  labels:
+    app: business-logic-service
 spec:
   selector:
     app: business-logic-service
