--- a/db-service/service.yaml
+++ b/db-service/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: database-service
+  labels:
+    app: database-service
 spec:
   selector:
     app: database-service
