--- a/monitoring/values.yaml
+++ b/monitoring/values.yaml
@@ -5,10 +5,14 @@ grafana:
       type: ClusterIP
       port: 3000           # match your ingress backend port
       targetPort: 3000     # Grafana container listens on 3000
-  rootUrl: "%(protocol)s://%(domain)s/grafana"
-  serveFromSubPath: true
   adminUser: admin
   adminPassword: admin
+
+  grafana.ini:
+    server:
+      domain: localhost
+      root_url: "%(protocol)s://%(domain)/grafana/"
+      serve_from_sub_path: true
 
 prometheus:
   prometheusSpec:
